fixes darkened mobs in watch also tinting some mobs in world
also adds config to disable darkening in the watch